# basic-cpp-project-setup

./: CMakeLists.txt  README.md
src/: main.cpp
tests/: CMakeLists.txt  test.cpp
